<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.ViewsPesan"
    android:id="@+id/frame_view_buku"
    android:background="@color/background">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_pesan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:padding="5dp" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_baseline_add_24"
            />

</androidx.constraintlayout.widget.ConstraintLayout>

