<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:id="@+id/fragment_transaksi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#edf6f9"
        android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
...
                            android:layout_height="wrap_content"
                            android:backgroundTint="#20639b"
                            android:drawableTop="@drawable/ic_baseline_note_add_24"
                            android:text="@string/transaksi" />

                        <Button
                            android:id="@+id/btnPesan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:backgroundTint="#20639b"
                            android:drawableTop="@drawable/ic_baseline_message_24"
                            android:text="@string/pesan" />
...
